[package]
name = "my_wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.1"
bip32 = {version="0.5.3", features=["alloc"]}
bip39 = {version="2.2.2", features=["zeroize"]}
bitcoin = "0.32.8"
bitcoin_hashes = "0.19.0"
corepc-client = {version="0.10.0", features=["client-sync"]}
rand_core = {version="0.6.4", features=["getrandom"]}
rustywallet-electrum = "0.2.0"
tokio = {version="1.49.0", features=["full"]}
zeroize = "1.8.2"
